Additional changes added to footer to fix layout issue

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,5 @@
 footer {
+    clear: both;
     .developer {
         text-decoration: none;
 
